# Job-Filtering-using-CrewAi

./: README.md  pyproject.toml
data/: profile.json  resume_template.tex
output/: Resume_Nani_Escalation_Engineer_-_AI_Secur_1.tex  Resume_Nani_Lead_Business_Analyst_Channel_5.tex  Resume_Nani_Senior_AI_Engineer_-_Regressio_3.tex  Resume_Nani_Senior_AI_Engineer__LLM__Gen_2.tex  Resume_Nani_Senior_Analyst_-_Business_Insi_4.tex  Resume_Nani_Software_Architect_2.tex  Resume_Nani_Sr_Technical_Lead-_TypeScript__1.tex
src/job_searcher/: crew.py  main.py
src/job_searcher/config/: agents.yaml  tasks.yaml
src/job_searcher/tools/: custom_tool.py  resume_tool.py
