[project]
name = "job_searcher"
version = "0.1.0"
description = "Job-Searcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.1"
]

[project.scripts]
job_searcher = "job_searcher.main:run"
run_crew = "job_searcher.main:run"
train = "job_searcher.main:train"
replay = "job_searcher.main:replay"
test = "job_searcher.main:test"
run_with_trigger = "job_searcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
